Posts content text-align fixed

--- a/css/posts.css
+++ b/css/posts.css
@@ -21,6 +21,10 @@ body .wp-site-blocks main ul li div h2 {
     height: 2rem !important;
 }
 
+.entry-content.wp-block-post-content p {
+    text-align: justify !important;
+}
+
 @media only screen and (min-width: 777px) {
     body .wp-site-blocks main ul li {
         margin-top: 2rem !important;
